--- a/visionSamples/barcode-reader/app/src/main/AndroidManifest.xml
+++ b/visionSamples/barcode-reader/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:fullBackupContent="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
-        android:label="MultiTrackerApp"
+        android:label="xid.diamas.org"
         android:supportsRtl = "true"
         android:theme="@style/Theme.AppCompat" >
         <meta-data
